@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-10
+2013-03-22 Andy Salnikov
+- regenerate whole thing from psddldata V00-04-17
+- use new enum-base feature to avoid specification of attribute type
+
 Tag: V00-01-09
 2013-03-22 Andy Salnikov
 - forgot to add data/gsc16ai-h5.ddl.xml to last tag
